--- a/project.properties
+++ b/project.properties
@@ -13,3 +13,6 @@
 # Project target.
 target=android-19
 android.library=true
+renderscript.target=18
+renderscript.support.mode=true
+sdk.buildtools=19.0.3
